Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.9
-
Fix Version/s: 10.9.0
-
Component/s: JSON
-
Labels:None
Description
In test:
SELECT JSON_OVERLAPS('','');
|
Expected result:
SELECT JSON_OVERLAPS('','');
|
JSON_OVERLAPS('','')
|
0
|
Warnings:
|
Warning 4037 Unexpected end of JSON text in argument 1 to function 'json_overlaps'
|
Actual result:
SELECT JSON_OVERLAPS('','');
|
JSON_OVERLAPS('','')
|
1
|
Warnings:
|
Warning 4037 Unexpected end of JSON text in argument 1 to function 'json_overlaps'
|
The result is a warning and 1 (true),but I expect 0 or may be 'null', because we cannot compare this two objects
Attachments
Issue Links
- relates to
-
MDEV-27677 Implement JSON_OVERLAPS()
-
- Closed
-