MDEV-27990: Incorrect behavior of JSON_OVERLAPS() on warning

Analysis: In case of error while processing json document, we goto
error label which eventually return 1 instead of 0.
Fix: Return 0 in case of error instead of 1.